--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
             <p>Tại LG Spa Training Center, chúng tôi không chỉ truyền đạt kiến thức chuyên môn mà còn giúp học viên phát triển toàn diện những yếu tố trên. Bởi chúng tôi tin rằng, một kỹ thuật viên spa thực sự giỏi là người có thể mang lại giá trị thực sự
                 cho khách hàng, cho spa và cho chính bản thân mình.</p>
 
-            <a class="cta" href="https://lgspatraining.com/" target="_blank" rel="noopener">Liên hệ LG Spa Training Center để được tư vấn khóa học spa phù hợp!</a>
+            <a class="cta" href="#" target="_blank" rel="noopener">Liên hệ LG Spa Training Center để được tư vấn khóa học spa phù hợp!</a>
         </main>
     </div>
 </body>
