--- a/index.html
+++ b/index.html
@@ -1,1 +1,43 @@
-<a href="hoc-nghe-spa.html">Trang chủ</a>
+<!DOCTYPE html>
+<html lang="vi">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Trang Chủ - Học Spa Cần Những Gì?</title>
+    <meta name="description" content="Khám phá những yếu tố tạo nên một kỹ thuật viên spa giỏi.">
+    <link rel="canonical" href="https://yourwebsite.com/">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            background-color: #f8f8f8;
+            padding: 50px;
+        }
+        
+        a {
+            display: inline-block;
+            padding: 12px 24px;
+            background-color: #ff7f50;
+            color: white;
+            text-decoration: none;
+            border-radius: 6px;
+            font-size: 18px;
+            transition: background-color 0.3s ease;
+        }
+        
+        a:hover {
+            background-color: #e96b3c;
+        }
+    </style>
+</head>
+
+<body>
+    <h1>Chào mừng đến với Trang Chủ</h1>
+    <p>Khám phá kiến thức và kỹ năng cần có để trở thành kỹ thuật viên spa chuyên nghiệp.</p>
+    <a href="hoc-spa-can-nhung-gi-dieu-gi-tao-nen-mot-ky-thuat-vien-gioi.html">
+        Học Spa Cần Những Gì?
+    </a>
+</body>
+
+</html>
